temp fix to table not fitting

--- a/css/reserve.css
+++ b/css/reserve.css
@@ -18,11 +18,11 @@
 /* Note: This causes the table to expand past page */
 .tdBox {
     display: inline-block; 
-    width: 26px;
+    width: 20px;
     height: 23px;
     padding: 1px 3px; 
     border: 4px double white;
-    background-color:#ddd;
+    background-color: #ddd;
     opacity: 0.4;
 } 
 
